--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
     <string name="floor_area_rate_hint">Ex: 2.25</string>
     <string name="building_price">房價(萬)</string>
     <string name="add_city_renew">加計都更</string>
+    <string name="common_loading">共同負擔(%)</string>
     <string name="floor_area_rate_bonus">容積獎勵(%)</string>
     <string name="result">計算結果</string>
     <string name="building_fee">建物造價(元)</string>
